examples/invalid/09_Derive_Json_Unsupported.lune
module DeriveJsonUnsupported exposing (bad)

@derive(Json)
type alias NotARecord =
  Int

bad : Int
bad =
  1

